feat: ensure null values do not prevent email from being sent
OCD-3964